<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GrizzlID</string>
	<string name="button_login_text">Login</string>
	<string name="activity_oidprovider_login_failed">Login failed:</string>
	<string name="activity_oidprovider_autologin">Auto-login ?</string>
	<string name="activity_oidrequest_notification_title">OpenID request</string>
	<string name="activity_grizzlid_logging">Logging in...</string>
	<string name="activity_oidrequest_notification_button_accept">Accept</string>
	<string name="activity_oidrequest_notification_button_refuse">Refuse</string>
	<string name="activity_oidrequest_response">Sending response...</string>
	<string name="activity_oidprovider_list_loading">Loading requests...</string>
	<string name="activity_oidrequest_notification_required_fields">This site requires information:</string>
	<string name="activity_oidrequest_notification_none_required_field">This site does not require any information.</string>
	<string name="activity_oidprovider_list_empty">No pending OpenID request</string>
	<string name="oidrequest_request_error">Error: </string>
	<string name="oidrequest_io_error">Network error: </string>
	<string name="oidrequest_json_error">JSON error: </string>
	<string name="c2dm_successfully_registered">Successfully registered!</string>
	<string name="oidrequest_row_label_site">Site: </string>
	<string name="oidrequest_row_label_status_pending">Status: pending</string>
	<string name="oidrequest_row_label_status_accepted">Status: accepted</string>
	<string name="oidrequest_row_label_status_refused">Status: refused</string>
	<string name="oidrequest_list_json_error">GrizzlID JSON error: </string>
	<string name="oidrequest_list_io_error">GrizzlID Network error: </string>
	<string name="oidrequest_list_error">GrizzlID error: </string>
	<string name="option_menu_refresh">Refresh</string>
	<string name="option_menu_logout">Logout</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="oauth_dialog_confirmation">An OAuth request is waiting for you on %s. Would you like to read her ?</string>
	<string name="activity_login_register">To register a new account, please visit https://openid.bearstech.com</string>
	<string name="activity_login_hint_username">Enter your email</string>
	<string name="activity_login_hint_pwd">Enter your password</string>
</resources>
